# local-jarvis

./: .gitignore  .gitmodules  AGENTS.md  CLICKY_README.md  LICENSE  LOCAL_RUNTIME.md  OPENAI_RUNTIME.md  PRD.md  README.md  SOFTWARE_ONLY_PLAN.md  appcast.xml  docker-compose.yml
leanring-buddy/: AGENTS.md  AppBundleConfiguration.swift  AppleSpeechTranscriptionProvider.swift  AssemblyAIStreamingTranscriptionProvider.swift  BuddyAudioConversionSupport.swift  BuddyDictationManager.swift  BuddyTranscriptionProvider.swift  ClaudeAPI.swift  ClickyAnalytics.swift  CompanionManager.swift  CompanionPanelView.swift  CompanionResponseOverlay.swift  CompanionScreenCaptureUtility.swift  DesignSystem.swift  ElementLocationDetector.swift  ElevenLabsTTSClient.swift  GlobalPushToTalkShortcutMonitor.swift  Info.plist  JarvisAssistantManager.swift  JarvisClaudePlannerClient.swift  JarvisComputerUseAgent.swift  JarvisComputerUseTools.swift  JarvisDebugLogger.swift  JarvisLocalLLMClient.swift  JarvisLocalLLMPlanner.swift  JarvisOpenAIClient.swift  JarvisPhaseOneMap.md  JarvisPhaseTwoTools.swift  JarvisPlanner.swift  JarvisSafetyPolicy.swift  JarvisTool.swift  JarvisToolRegistry.swift  JarvisVoiceIntentRouter.swift  JarvisWorkflowState.swift  MenuBarPanelManager.swift  OpenAIAPI.swift  (+5 more)
leanring-buddy.xcodeproj/: project.pbxproj
linux/: .gitignore  README.md  local-jarvis.desktop  pyproject.toml
linux/src/local_jarvis_linux/: __init__.py  agent.py  cli.py  config.py  desktop.py  gui.py  openai_client.py
linux/tests/: test_agent.py  test_config.py  test_openai_client.py
(+22 files in other folders)
